--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#d32f2f</color>
     <color name="background">#e57373</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
 </resources>
