--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".MyList">
-
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
@@ -19,7 +18,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/AppTheme.PopupOverlay"
-        android:weightSum="1">
+        >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -29,7 +28,7 @@
                 android:layout_height="match_parent"
                 android:id="@+id/userimage"
                 android:src="@drawable/userimage"
-                android:layout_weight="0.18" />
+                 />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -39,7 +38,7 @@
                 android:gravity="center"
                 android:textSize="@dimen/activity_vertical_margin"
                 android:text="Shubham Juneja"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 />
             <ImageView
                 android:layout_width="wrap_content"
@@ -53,10 +52,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-   <include layout="@layout/recycler"
-       android:id="@+id/include"></include>
+    <include layout="@layout/recycler"
 
-
+        android:id="@+id/include"></include>
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
@@ -66,4 +64,5 @@
         android:id="@+id/floatingActionButton"
         app:layout_anchorGravity="bottom|right"
         android:layout_gravity="top|center_horizontal" />
+
 </android.support.design.widget.CoordinatorLayout>
