--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#d32f2f</color>
-    <color name="background">#e57373</color>
+    <color name="background">#ba68c8</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="hintcolor">#37474f</color>
 </resources>
