--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">#ef5350</item>
 
 
+
     </style>
     <style name="AppTheme.NoActionBar">
 
@@ -19,5 +20,10 @@
     </style>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" >
 
+    </style>
+
+    <style name="checkbox" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/black</item>
+        <item name="colorControlActivated">@color/black</item>
     </style>
 </resources>
