--- a/app/src/main/res/layout/newtask_card.xml
+++ b/app/src/main/res/layout/newtask_card.xml
@@ -3,16 +3,19 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:id="@+id/linear"
     android:layout_height="match_parent">
 <android.support.v7.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     card_view:cardBackgroundColor="@color/white"
+    android:id="@+id/card"
     card_view:cardCornerRadius="@dimen/card_album_radius">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_height="match_parent"
+        android:id="@+id/linear2"
         android:weightSum="15">
 <CheckBox
     android:layout_width="0dp"
