--- a/app/src/main/res/layout/newtask_card.xml
+++ b/app/src/main/res/layout/newtask_card.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:id="@+id/linear"
-    android:layout_height="match_parent">
-<android.support.v7.widget.CardView
-    android:layout_width="match_parent"
+
+<android.support.v7.widget.CardView android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools"
     card_view:cardBackgroundColor="@color/white"
     android:id="@+id/card"
-    card_view:cardCornerRadius="@dimen/card_album_radius">
+    app:cardUseCompatPadding="true"
+    card_view:cardCornerRadius="@dimen/card_album_radius"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
@@ -46,4 +44,3 @@
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
-</LinearLayout>
