--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="ic_album_overflow_height">30dp</dimen>
     <dimen name="ic_album_overflow_margin_top">10dp</dimen>
     <dimen name="album_tasktopic_padding">20dp</dimen>
+    <dimen name="nav_header_vertical_spacing">20dp</dimen>
 </resources>
