--- a/app/src/main/res/layout/newtask_card.xml
+++ b/app/src/main/res/layout/newtask_card.xml
@@ -8,6 +8,7 @@
     android:id="@+id/card"
     app:cardUseCompatPadding="true"
     card_view:cardCornerRadius="@dimen/card_album_radius"
+    android:minHeight="65dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +18,7 @@
         android:weightSum="15">
 <CheckBox
     android:layout_width="0dp"
-    android:layout_height="wrap_content"
+    android:layout_height="55dp"
     android:id="@+id/check"
     android:theme="@style/checkbox"
     android:layout_weight="2"
@@ -26,6 +27,7 @@
     android:layout_width="0dp"
     android:layout_height="match_parent"
     android:id="@+id/name"
+    android:textSize="20dp"
     android:gravity="bottom"
     android:layout_marginBottom="5dp"
     android:textColor="@color/black"
@@ -33,12 +35,13 @@
     />
         <ImageButton
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_weight="2"
             android:background="@color/white"
             android:src="@drawable/heart"
             android:scaleType="fitCenter"
             android:id="@+id/favourite2"
+            android:layout_marginTop="5dp"
             android:adjustViewBounds="true"
             />
 
