--- a/app/src/main/res/layout/mytask_card.xml
+++ b/app/src/main/res/layout/mytask_card.xml
@@ -47,20 +47,25 @@ android:layout_height="wrap_content"
                     android:textColor="@color/black"
                     android:text="Task name"
                     android:gravity="center"
-                    android:textSize="15dp"
+                    android:textSize="20dp"
+                    android:layout_marginRight="20dp"
+                    android:onClick="funopen"
+
                     />
 
                 <ProgressBar
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="match_parent"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginRight="30dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginRight="40dp"
                     android:layout_height="15dp"
                     android:progressDrawable="@drawable/custom_progrss_bar"
                     android:layout_marginTop="5dp"
                     android:id="@+id/progressBar"
                     android:layout_below="@id/title"
-                    android:progress="56"/>
+                    android:progress="56"
+                    android:onClick="funopen"
+                    />
 
                 <TextView
                     android:id="@+id/taskcount"
@@ -72,23 +77,37 @@ android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:textColor="@color/black"
                     android:gravity="center"
-                    android:textSize="10dp"/>
+                    android:textSize="15dp"
+                    android:layout_marginRight="20dp"
+                    android:onClick="funopen"
 
+                    />
 
+<RelativeLayout
+    android:layout_width="30dp"
+    android:layout_height="55dp"
+    android:layout_alignParentRight="true"
+    android:background="@color/white"
+
+    android:layout_alignParentBottom="true"
+    android:onClick="funoptions"
+    >
                 <ImageButton
                     android:id="@+id/overflow"
                     android:layout_width="20dp"
-                    android:layout_height="25dp"
-                    android:layout_alignParentRight="true"
                     android:background="@color/white"
-                    android:layout_alignParentBottom="true"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_height="20dp"
                     android:src="@drawable/dots"
                     android:onClick="funoptions"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_alignParentBottom="true"
+
                     />
                     />
+</RelativeLayout>
         </RelativeLayout>
 
 </android.support.v7.widget.CardView>
