--- a/app/src/main/res/layout/newtask_card.xml
+++ b/app/src/main/res/layout/newtask_card.xml
@@ -8,7 +8,7 @@
     android:id="@+id/card"
     app:cardUseCompatPadding="true"
     card_view:cardCornerRadius="@dimen/card_album_radius"
-    android:minHeight="65dp"
+    android:minHeight="55dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
     android:layout_height="match_parent"
     android:id="@+id/name"
     android:textSize="20dp"
-    android:gravity="bottom"
+android:gravity="center_vertical"
     android:layout_marginBottom="5dp"
     android:textColor="@color/black"
     android:layout_weight="11"
