--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -62,7 +62,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
-
+            android:id="@+id/alarm"
             android:onClick="setalarm" />
     </RelativeLayout>
 
@@ -110,6 +110,7 @@
         android:minHeight="50dp"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:onClick="changeimage"
         >
     <ImageView
         android:layout_width="27dp"
@@ -123,7 +124,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/image4"
-        android:text="Add a file"
+        android:text="Add a Image"
         android:id="@+id/link"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
@@ -140,36 +141,13 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         >
-        <TextView
-            android:layout_width="wrap_content"
+        <ImageView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="All uploaded files area available here"
-            android:textColor="@color/black"/>
+            android:id="@+id/reminderimage"
+            android:src="@drawable/remember"
+            />
 
 
     </RelativeLayout>
-
-
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:background="@color/white"
-    >
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/chatbubble"
-        android:layout_marginLeft="20dp"
-        android:id="@+id/chatbubble"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
-        android:text="Conversations....."
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        />
-
-</RelativeLayout>
 </RelativeLayout>
