--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -142,8 +142,9 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         >
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_centerInParent="true"
             android:id="@+id/reminderimage"
             android:src="@drawable/remember"
             />
