--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,12 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#2196f3</item>
         <item name="colorPrimaryDark">#b71c1c</item>
         <item name="colorAccent">#ef5350</item>
+        <item name="android:background">@drawable/bg</item>
     </style>
     <style name="AppTheme.NoActionBar">
 
