--- a/app/src/main/res/layout/recycler.xml
+++ b/app/src/main/res/layout/recycler.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:background="@drawable/bg"
+    android:background="@drawable/back9"
 
     >
 
