--- a/app/src/main/res/drawable/selector.xml
+++ b/app/src/main/res/drawable/selector.xml
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-    <shape xmlns:android="http://schemas.android.com/apk/res/android">
-        <solid android:color="#871bff"/>
-        <stroke android:width="4dip" android:color="#871b83" />
-        <corners android:radius="4dip"/>
-        <padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="0dip" />
-    </shape>
+<?xml version="1.0" encoding="UTF-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FFFFFF" />
+    <stroke android:width="5dp" android:color="#000000" />
+    <padding android:left="1dp" android:top="1dp" android:right="1dp"
+        android:bottom="1dp" />
+</shape>
