--- a/app/src/main/res/layout/mytask_card.xml
+++ b/app/src/main/res/layout/mytask_card.xml
@@ -32,7 +32,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:layout_height="@dimen/album_cover_height"
-                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:background="@drawable/selector"
                     android:clickable="true"
                     android:src="@drawable/grocery"
                     android:scaleType="fitXY"
@@ -59,8 +59,8 @@
                 <ProgressBar
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="match_parent"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="30dp"
+                    android:layout_marginRight="30dp"
                     android:layout_height="15dp"
                     android:progressDrawable="@drawable/custom_progrss_bar"
                     android:layout_marginTop="5dp"
