--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="ic_album_overflow_margin_top">10dp</dimen>
     <dimen name="album_tasktopic_padding">20dp</dimen>
     <dimen name="nav_header_vertical_spacing">20dp</dimen>
+    <dimen name="nav_header_height">160dp</dimen>
 </resources>
