--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -3,33 +3,39 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/inbox"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Inbox" />
+        <item
+            android:id="@+id/yourlog"
+            android:icon="@drawable/ic_menu_camera"
+
+            android:title="Your Log" />
+        <item
+            android:id="@+id/myfavourites"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="My Favourites" />
+        <item
+            android:id="@+id/scheduledtasks"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="Scheduled Tasks" />
+
     </group>
 
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/settings"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="Settings" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/aboutus"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="About Us"/>
+            <item
+                android:id="@+id/feedback"
+                android:icon="@drawable/ic_menu_manage"
+                android:title="Send Feedback" />
         </menu>
     </item>
 
