Create List with same name

--- a/app/src/main/res/layout/activity_inbox_task.xml
+++ b/app/src/main/res/layout/activity_inbox_task.xml
@@ -61,6 +61,7 @@
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="Task Name"
+
                 android:layout_marginLeft="30dp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -72,21 +73,56 @@
 
 
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/listnametag"
-                android:id="@+id/newtaskname"
-                android:layout_marginRight="30dp"
-                android:layout_marginTop="20dp"
-                android:hint="Add a ToDo..."
-                android:layout_alignLeft="@id/listnametag"
-                android:background="@drawable/rounded_corners"
-                android:textColor="@color/black"
-                android:textStyle="italic"
-                android:textSize="20dp"
-                android:textColorHint="@color/hintcolor"
-                />
+               <RelativeLayout
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_below="@+id/listnametag"
+                   android:layout_marginTop="10dp"
+                   android:layout_marginLeft="30dp"
+                   android:layout_marginRight="10dp"
+                   android:id="@+id/relativelayout"
+                   android:background="@color/white"
+
+                   >
+                   <LinearLayout
+                       android:layout_width="match_parent"
+                       android:layout_height="40dp"
+                       android:id="@+id/newtaskenter"
+                       android:weightSum="20"
+                       android:background="@color/white"
+                       android:layout_marginRight="5dp"
+                       android:focusable="true" android:focusableInTouchMode="true"
+                       >
+                       <EditText
+                           android:layout_width="0dp"
+                           android:layout_weight="18"
+                           android:layout_height="match_parent"
+                           android:textSize="20dp"
+                           android:hint="Add new task..."
+                           android:id="@+id/newtaskname"
+                           android:singleLine="true"
+                           android:textColor="#0d47a1"
+                           android:background="@color/white"
+                           android:textAlignment="center"
+                           android:textColorHint="@color/hintcolor"
+
+                           />
+
+                       <ImageButton
+                           android:layout_width="6dp"
+                           android:layout_weight="2"
+                           android:layout_height="40dp"
+                           android:src="@drawable/favourite"
+                           android:background="@color/white"
+                           android:scaleType="fitCenter"
+                           android:id="@+id/fav"
+                           android:onClick="favourite"
+                           android:adjustViewBounds="true"
+
+                           />
+                   </LinearLayout>
+
+               </RelativeLayout>
            </RelativeLayout>
 
 
