Working on inboxtask

--- a/app/src/main/res/layout/activity_inbox_task.xml
+++ b/app/src/main/res/layout/activity_inbox_task.xml
@@ -157,15 +157,16 @@
             android:textColor="@color/hintcolor"
             />
 
-        <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/alarmoff"
             android:layout_alignParentRight="true"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
             android:id="@+id/alarm"
-            android:onClick="setalarm"
-            />
+            android:onClick="setalarm" />
     </RelativeLayout>
 
         </RelativeLayout>
