--- a/app/src/main/res/layout/activity_favourite.xml
+++ b/app/src/main/res/layout/activity_favourite.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,6 +12,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:id="@+id/appbarlayout1"
         android:theme="@style/AppTheme.AppBarOverlay">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -25,17 +26,22 @@
 
     </android.support.design.widget.AppBarLayout>
 
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_below="@+id/appbarlayout1"
+    android:background="@drawable/back9"
+    >
     <android.support.v7.widget.RecyclerView
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/recycler_view"
-        android:layout_below="@+id/toolbar"
+
 
 
         />
-
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
+</RelativeLayout>
