--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="white">#FFFFFF</color>
     <color name="hintcolor">#37474f</color>
     <color name="yellow">#ffd600</color>
+    <color name="grey">#A9A9A9</color>
 </resources>
