--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -34,11 +34,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="20"
+        android:onClick="changetone"
         android:orientation="horizontal">
     <ImageView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="3"
+        android:layout_marginTop="5dp"
         app:srcCompat="@drawable/ic_notifications_black_24dp"/>
         <LinearLayout
             android:layout_width="0dp"
@@ -54,7 +56,47 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/tone"
                 android:text="Default ringtone"/>
+        </LinearLayout>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/grey"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        ></View>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="20"
+        android:orientation="horizontal"
+        android:onClick="vibrate"
+        >
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_weight="3"
+            android:layout_marginTop="5dp"
+            app:srcCompat="@drawable/ic_vibration_black_24dp"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="15">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Vibrate"
+                android:textSize="20dp"
+                android:textColor="@color/black"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/vibrate"
+                android:text="Off"/>
         </LinearLayout>
     </LinearLayout>
     <View
