--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -72,12 +72,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:weightSum="20"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal"
-        android:onClick="vibrate"
+        android:onClick="setvibrate"
         >
         <ImageView
             android:layout_width="0dp"
-            android:layout_height="30dp"
+            android:layout_height="25dp"
             android:layout_weight="3"
             android:layout_marginTop="5dp"
             app:srcCompat="@drawable/ic_vibration_black_24dp"/>
