--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -57,7 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tone"
-                android:text="Default ringtone"/>
+                android:text="None"/>
         </LinearLayout>
     </LinearLayout>
     <View
