--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -108,5 +108,43 @@
         android:layout_marginTop="10dp"
         ></View>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:weightSum="20"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal"
+        android:onClick="deleteall"
+        >
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="25dp"
+            android:layout_weight="3"
+            android:layout_marginTop="5dp"
+            app:srcCompat="@drawable/delete"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delete all"
+                android:textSize="20dp"
+                android:textColor="@color/black"/>
+
+        </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/grey"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        ></View>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/grey"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        ></View>
+
 </LinearLayout>
 </RelativeLayout>
