--- a/app/src/main/res/layout/activity_inbox_task.xml
+++ b/app/src/main/res/layout/activity_inbox_task.xml
@@ -56,20 +56,9 @@
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
-               android:id="@+id/todo">
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Task Name"
+               android:id="@+id/todo"
+               android:layout_marginTop="30dp">
 
-                android:layout_marginLeft="30dp"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                android:layout_marginTop="30dp"
-                android:gravity="center"
-                android:textSize="15dp"
-                android:background="@drawable/rounded_corners"
-                android:id="@+id/listnametag"/>
 
 
 
@@ -98,7 +87,7 @@
                            android:layout_weight="18"
                            android:layout_height="match_parent"
                            android:textSize="20dp"
-                           android:hint="Add new task..."
+                           android:hint="Add a new task..."
                            android:id="@+id/newtaskname"
                            android:singleLine="true"
                            android:textColor="#0d47a1"
@@ -133,7 +122,6 @@
         android:id="@+id/relativelayout1"
         android:minHeight="50dp"
         android:layout_marginTop="20dp"
-
         android:layout_marginLeft="30dp"
         android:layout_below="@id/todo"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
@@ -166,7 +154,8 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
             android:id="@+id/alarm"
-            android:onClick="setalarm" />
+            android:onClick="setalarm"
+            />
     </RelativeLayout>
 
         </RelativeLayout>
