--- a/app/src/main/res/layout/activity_inbox.xml
+++ b/app/src/main/res/layout/activity_inbox.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
 
-    tools:context=".NewTaskActivity">
+    tools:context="navigation.Inbox">
 
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
