--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -26,7 +26,7 @@
             <item
                 android:id="@+id/aboutus"
                 android:icon="@drawable/aboutus"
-                android:title="About Us"/>
+                android:title="Help"/>
             <item
                 android:id="@+id/feedback"
                 android:icon="@drawable/feedback"
