--- a/app/src/main/res/layout/mytask_card.xml
+++ b/app/src/main/res/layout/mytask_card.xml
@@ -27,6 +27,7 @@
             >
 
             <ImageView
+                android:layout_marginTop="5dp"
                 android:id="@+id/taskimage"
                 android:layout_width="match_parent"
                 android:layout_marginLeft="5dp"
