--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -124,7 +124,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/image4"
-        android:text="Add a Image"
+        android:text="Add an Image"
         android:id="@+id/link"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
@@ -140,6 +140,7 @@
         android:background="@color/white"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:onClick="changeimage"
         >
         <ImageView
             android:layout_width="150dp"
