--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -110,7 +110,7 @@
         android:minHeight="50dp"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:onClick="changeimage"
+        android:onClick="changeicon"
         >
     <ImageView
         android:layout_width="27dp"
@@ -140,7 +140,7 @@
         android:background="@color/white"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:onClick="changeimage"
+        android:onClick="changeicon"
         >
         <ImageView
             android:layout_width="150dp"
