--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -29,6 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/floater" />
+        android:src="@drawable/floater"
+        android:backgroundTint="#E71E62"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
