--- a/app/src/main/res/layout/othertask_card.xml
+++ b/app/src/main/res/layout/othertask_card.xml
@@ -9,19 +9,21 @@
     app:cardUseCompatPadding="true"
     card_view:cardCornerRadius="@dimen/card_album_radius"
     android:minHeight="55dp"
+
     xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:layout_height="match_parent"
         android:id="@+id/linear2"
-        android:weightSum="20">
+
+        android:weightSum="22">
         <CheckBox
             android:layout_width="0dp"
-            android:layout_height="55dp"
+            android:layout_height="match_parent"
             android:id="@+id/check"
             android:theme="@style/checkbox"
-            android:layout_weight="2"
+            android:layout_weight="4"
             />
         <RelativeLayout
             android:layout_width="0dp"
