alpha set for completed task

--- a/app/src/main/res/layout/mytask_card.xml
+++ b/app/src/main/res/layout/mytask_card.xml
@@ -13,13 +13,13 @@
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_margin="@dimen/card_margin"
 
         app:cardElevation="0dp"
         app:cardMaxElevation="0dp"
-        android:background="@drawable/selector"
+
         card_view:cardUseCompatPadding="true"
         card_view:cardCornerRadius="@dimen/card_album_radius">
 
@@ -92,9 +92,18 @@
 
                 />
 
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/dots"
+                android:id="@+id/imageView2"
+                android:onClick="funoptions"
+                android:layout_below="@id/progressBar"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+
 
         </RelativeLayout>
-
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
