--- a/app/src/main/res/layout/newlistcontent.xml
+++ b/app/src/main/res/layout/newlistcontent.xml
@@ -16,15 +16,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
+        android:id="@+id/abcd"
         >
 
         <EditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="User Name"
+            android:layout_height="70dp"
+            android:hint="List Name"
+
             android:id="@+id/newtaskname"
             />
     </android.support.design.widget.TextInputLayout>
+
+<ImageView
+    android:layout_width="300dp"
+    android:layout_height="300dp"
+    android:src="@drawable/study"
+    android:id="@+id/abcd2"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_centerHorizontal="true"
+    android:layout_centerVertical="true"
+    android:layout_marginTop="10dp"
+    />
 
 
     </RelativeLayout>
