--- a/app/src/main/res/layout/activity_inbox_task.xml
+++ b/app/src/main/res/layout/activity_inbox_task.xml
@@ -50,10 +50,8 @@
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
-                   android:layout_below="@+id/listnametag"
                    android:layout_marginTop="10dp"
-                   android:layout_marginLeft="30dp"
-                   android:layout_marginRight="10dp"
+
                    android:id="@+id/relativelayout"
                    android:background="@color/white"
 
@@ -142,7 +140,14 @@
             android:onClick="setalarm"
             />
     </RelativeLayout>
-
+<ImageView
+    android:layout_width="300dp"
+    android:layout_height="300dp"
+    android:layout_below="@id/relativelayout1"
+    android:layout_centerInParent="true"
+    android:layout_marginTop="20dp"
+    android:src="@drawable/minion"
+    />
         </RelativeLayout>
 
 </RelativeLayout>
