--- a/app/src/main/res/layout/mycard.xml
+++ b/app/src/main/res/layout/mycard.xml
@@ -3,9 +3,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="110dp"
     xmlns:app="http://schemas.android.com/tools"
-    android:layout_marginRight="20dp"
 
     >
     <android.support.v7.widget.CardView
@@ -30,11 +29,11 @@
                 android:id="@+id/taskimage"
                 android:layout_width="0dp"
 
-                android:layout_weight="7"
+                android:layout_weight="8"
                 android:layout_marginLeft="5dp"
                 android:layout_height="match_parent"
                 android:clickable="true"
-                android:layout_marginBottom="15dp"
+                android:layout_marginBottom="5dp"
                 android:src="@drawable/grocery"
                 android:scaleType="fitXY"
                 android:onClick="funopen"
@@ -45,6 +44,7 @@
                 android:layout_weight="10"
                 android:orientation="vertical"
                 android:weightSum="20"
+                android:onClick="funopen"
                 android:layout_height="match_parent">
             <TextView
                 android:id="@+id/title"
@@ -56,7 +56,6 @@
                 android:text="Task name"
                 android:gravity="center"
                 android:textSize="20sp"
-                android:onClick="funopen"
 
                 />
 
@@ -73,7 +72,6 @@
                 android:id="@+id/progressBar"
                 android:layout_below="@id/title"
                 android:progress="56"
-                android:onClick="funopen"
                 />
 
             <TextView
@@ -90,16 +88,19 @@
 
                 />
             </LinearLayout>
-            <ImageView
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="3"
+                android:layout_weight="2"
+                android:onClick="funoptions"
+                android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:src="@drawable/dots"
                 android:layout_gravity="center"
                 android:id="@+id/imageView2"
-                android:onClick="funoptions"
                  />
-
+            </LinearLayout>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
