--- a/app/src/main/res/layout/activity_new_task.xml
+++ b/app/src/main/res/layout/activity_new_task.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-
+    android:id="@+id/relativelayout4"
+    android:onClick="dun"
     tools:context=".NewTaskActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -65,6 +66,7 @@
                 android:layout_height="50dp"
                 android:hint="Add new task..."
                 android:id="@+id/newtaskname"
+                android:onClick="dun"
                 android:singleLine="true"
                 android:textColor="#0d47a1"
                 android:background="@color/white"
@@ -82,6 +84,7 @@
                 android:scaleType="fitCenter"
                 android:id="@+id/fav"
                 android:onClick="favourite"
+
                 android:adjustViewBounds="true"
 
                 />
