--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -37,6 +37,7 @@
         />
 <RelativeLayout
     android:layout_width="match_parent"
+    android:onClick="dun"
     android:layout_height="wrap_content">
     <Button
         android:layout_width="wrap_content"
