Info class removed

--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -17,7 +17,7 @@
         <item
             android:id="@+id/hel"
             android:icon="@drawable/help"
-            android:title="Help" />
+            android:title="Start Tutorial" />
 
     </group>
 
