--- a/app/src/main/res/layout/activity_inbox_task.xml
+++ b/app/src/main/res/layout/activity_inbox_task.xml
@@ -146,7 +146,8 @@
     android:layout_below="@id/relativelayout1"
     android:layout_centerInParent="true"
     android:layout_marginTop="20dp"
-    android:src="@drawable/minion"
+
+    android:src="@drawable/minion_burned"
     />
         </RelativeLayout>
 
